# ChangeLog for app-xemacs/xemacs-devel
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/xemacs-devel/ChangeLog,v 1.24 2011/07/22 11:24:58 xarthisius Exp $
