@@ -1,1 +1,2 @@
 DIST xemacs-devel-1.82-pkg.tar.gz 257554 SHA256 a85bd8fd1a0d556db8eff8f733f603eae090ea196067bfe30fb8849a5077ed7e SHA512 7a9acd1b9dfb00018c47c72884debe948b29d31e0e5a984605cdc0806da6b145c9052a100b3c665fd32533c6fc70b7392f88fbba24bc6750dfdb483d54e7705c WHIRLPOOL b3dbcf59bd5080735275c49f6aba82cf9dc3fb3dd514d417e7163282c880fc97b7b5adfb783ad347ca2fe0b0ea5e16689f88121184c4c2f481e9508300a6d157
+DIST xemacs-devel-1.84-pkg.tar.gz 257872 SHA256 1c144348f3d0a7343982ee760cd608cdf781fa427d854158dc8b831f1ce7d6a1 SHA512 6b2448e42762593f2cc6fad3767288d3848eb45366d56f864f2a8f80651692d07dd63b3df70ae621ba88af07da0409011f228bb844d7fbf834681ffa80248f8c WHIRLPOOL b8d85c20c80cdedc265cd77e095c3d42d34d1633053406af075f48b903692dbc61dacb08380f8ce6daa9ef2d69bf6ebdd2718f802c78f4bf5e3a68c6120bcf43
