@@ -1,0 +1,28 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/xemacs-devel/xemacs-devel-1.80.ebuild,v 1.6 2011/07/22 11:24:58 xarthisius Exp $
+
+EAPI=5
+
+SLOT="0"
+IUSE=""
+DESCRIPTION="Emacs Lisp developer support."
+PKG_CAT="standard"
+
+EXPERIMENTAL=true
+
+RDEPEND="app-xemacs/xemacs-base
+app-xemacs/xemacs-ispell
+app-xemacs/mail-lib
+app-xemacs/gnus
+app-xemacs/rmail
+app-xemacs/tm
+app-xemacs/apel
+app-xemacs/sh-script
+app-xemacs/net-utils
+app-xemacs/xemacs-eterm
+app-xemacs/ecrypto
+"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc64 ~sparc ~x86"
+
+inherit xemacs-packages
