@@ -1,4 +1,9 @@
 # ChangeLog for app-xemacs/xemacs-devel
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-xemacs/xemacs-devel/ChangeLog,v 1.24 2011/07/22 11:24:58 xarthisius Exp $
+
+*xemacs-devel-1.84 (08 Jul 2014)
+
+  08 Jul 2014; Mats Lidell <matsl@gentoo.org> +xemacs-devel-1.84.ebuild:
+  Pre release version bump.
 
